--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
      <title>Document</title>
  </head>
  <body>
-     
+     <div class="wrapper">
+         <div class="header"></div>
+     </div>
  </body>
  </html>
