--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
  </head>
  <body>
      <div class="wrapper">
-         <div class="header"></div>
+         <div class="header">
+             <div class="logo"></div>
+         </div>
      </div>
  </body>
  </html>
