--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body>
      <div class="wrapper">
          <div class="header">
-             <div class="logo"></div>
+             <div class="logo">Logo</div>
          </div>
      </div>
  </body>
