--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body>
      <div class="wrapper">
          <div class="header">
-             Hello
+             Hello world
          </div>
      </div>
  </body>
