--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <div class="wrapper">
          <div class="header">
              Hello world
-             <div class="logo">Logo</div>
+             <div class="logo">Logo - 2</div>
          </div>
      </div>
  </body>
